feat: cambiar clave admin, jefes, 13 roles, validaciones, chatbot expandido
- Backend: endpoint PATCH /v1/usuarios/{id}/cambiar-password para cambio de clave por admin
- Backend: endpoint GET /v1/usuarios/jefes para roles de jefatura
- Backend: 13 roles del sistema (Analista, Desarrollador, Mesa de Servicio, Consultor, Auditor, Coordinador, Gerente, QA + originales)
- Backend: RolesSchemaUpdater para actualizar CHECK constraint en MySQL al arrancar
- Backend: campo id_jefe en usuarios y proyectos (relacion ManyToOne)
- Backend: validaciones de nombre con regex, password opcional en update, idJefe en DTOs
- Backend: chatbot expandido con 20+ temas (SLA, hardware, red, backup, correo, roles, etc)
- Frontend: modal cambiar clave con validacion en users.component
- Frontend: dropdown jefe directo en formulario de usuarios y proyectos
- Frontend: validaciones inline con mensajes de error en formularios
- Frontend: 13 roles en dropdown de creacion de usuario
- Frontend: 4 estados de proyecto con badges de colores
- Frontend: metricas de proyectos por estado (activos, en pausa, completados)
- Frontend: UI mejorada con mejor espaciado, botones warn, empty states

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>